--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/app.js",
     "seed": "ts-node prisma/seed.ts",
     "seed:all": "ts-node prisma/seed-all.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -39,8 +39,11 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
