--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@types/multer": "^2.0.0",
+    "@types/sharp": "^0.31.1",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "connect-livereload": "^0.6.1",
@@ -29,8 +31,10 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
