--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
