--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "nodemon --exec \"ts-node --transpile-only\" src/app.ts",
     "start": "node dist/app.js",
     "seed": "ts-node prisma/seed.ts",
     "seed:all": "ts-node prisma/seed-all.ts",
