--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ node_modules
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+.env.test
 
 /generated/prisma
 
@@ -19,6 +22,7 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 # OS
 .DS_Store
@@ -30,7 +34,23 @@ Thumbs.db
 *.swp
 *.swo
 *~
+*.sublime-*
 
 # Testing
 coverage/
 .nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+
+# Database
+*.db
+*.sqlite
+
+# Build artifacts
+*.tsbuildinfo
+
+# Docker
+docker-compose.override.yml
