--- a/.env.docker
+++ b/.env.docker
@@ -23,6 +23,10 @@ SECRET_KEY=your-secret-key-change-this-in-production
 # Frontend URL (for CORS)
 WEB_URL=http://localhost:3000
 
+# Database Seeding (Set to 'true' for first deployment only)
+# Set RUN_SEED=true in Railway for first deploy, then set to false
+RUN_SEED=false
+
 # File Upload (Optional)
 # MAX_FILE_SIZE=10485760
 # UPLOAD_DIR=./uploads
